# Layer-wise_ETM_MLP

./: LMI.py  LMI_works.py  README.md  config.py  pyproject.toml  system.py  test_results.py
auxiliary_code/: ellipsoids.py
results/: P.npy  Rho.npy  bigX1.npy  bigX2.npy  bigX3.npy  bigX4.npy
weights/: W1.csv  W2.csv  W3.csv  W4.csv  alpha.npy  b1.csv  b2.csv  b3.csv  b4.csv
